<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMain"
    tools:context=".settingString">

    <TextView
        android:id="@+id/textView_Seting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/caiDatGame"
        android:textColor="@color/colorTextButton"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_Sound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="35dp"
        android:text="@string/amThanh"
        android:textColor="@color/colorTextButton"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Seting" />

    <SeekBar
        android:id="@+id/seekBar_Sound"
        android:layout_width="400dp"
        android:layout_height="30dp"
        android:layout_marginTop="35dp"
        android:background="@color/colorTextButton"
        android:max="100"
        android:progress="90"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Sound" />

    <TextView
        android:id="@+id/textView_Brightness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="35dp"
        android:text="@string/doSang"
        android:textColor="@color/colorTextButton"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar_Sound" />

    <SeekBar
        android:id="@+id/seekBar2"
        android:layout_width="400dp"
        android:layout_height="30dp"
        android:layout_marginTop="35dp"
        android:background="@color/colorTextButton"
        android:max="100"
        android:progress="95"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Brightness" />

    <TextView
        android:id="@+id/textView_Level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="48dp"
        android:text="@string/cheDo"
        android:textColor="@color/colorTextButton"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar2" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="300dp"
        android:layout_height="53dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Level">

        <RadioButton
            android:id="@+id/radioButton_easy"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@color/colorTextButton"
            android:checked="true"
            android:text="@string/de" />

        <RadioButton
            android:id="@+id/radioButton_hard"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@color/colorTextButton"
            android:text="@string/kho" />

        <RadioButton
            android:id="@+id/radioButton_Medium"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@color/colorTextButton"
            android:text="@string/trungBinh" />

    </RadioGroup>

    <Button
        android:id="@+id/button_Save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@color/colorButton"
        android:text="@string/luu"
        android:textColor="@color/colorTextButton2"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <ImageView
        android:id="@+id/imgViet"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:src="@drawable/icons8_vietnam_480px"
        app:layout_constraintBottom_toTopOf="@+id/button_Save"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <ImageView
        android:id="@+id/imgMy"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/icons8_usa_500px"
        app:layout_constraintBottom_toBottomOf="@+id/imgViet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/imgViet"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorTextButton"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>