<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00ADEF"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btnAchi"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:background="@color/colorButton"
        android:text="@string/thanhTu"
        android:textColor="@color/colorTextButton"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btnPlay"
        app:layout_constraintStart_toStartOf="@+id/btnPlay"
        app:layout_constraintTop_toBottomOf="@+id/btnPlay" />

    <Button
        android:id="@+id/btnPlay"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@color/colorButton"
        android:text="@string/choi"
        android:textColor="@color/colorTextButton"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <Button
        android:id="@+id/btnSetting"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:background="@color/colorButton"
        android:text="@string/caiDat"
        android:textColor="@color/colorTextButton"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btnAchi"
        app:layout_constraintStart_toStartOf="@+id/btnAchi"
        app:layout_constraintTop_toBottomOf="@+id/btnAchi" />

    <ImageView
        android:id="@+id/imgIcon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/babymilo" />

</androidx.constraintlayout.widget.ConstraintLayout>